[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Nanobot1/Nanobot1.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Nanobot1" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, -12 )
shape = SubResource( 2 )

[node name="Sprite" type="Node2D" parent="."]

[node name="FloorDetection" type="RayCast2D" parent="Sprite"]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
